Implementiere Schreibmaschineneffekt für Chat-Antworten und korrigiere System-Prompt

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.52.0",
     "@headlessui/react": "^2.2.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
