--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:pwa": "tsc && vite build",
     "build:widget": "tsc && vite build --config vite.widget.config.ts",
     "preview": "vite preview",
+    "preview:pwa": "vite preview --port 3000",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:pwa": "npm run build:pwa && npm run preview:pwa",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,json,css,md}",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pwa:generate-icons": "echo 'Generate PWA icons using a tool like PWA Asset Generator'",
+    "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.52.0",
@@ -64,7 +69,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
-    "vitest": "^1.2.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "vitest": "^1.2.0",
+    "workbox-window": "^7.3.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
